fix trackList resize and overflow issues

--- a/src/renderer/css/component/track-list.css
+++ b/src/renderer/css/component/track-list.css
@@ -130,17 +130,19 @@ tbody tr {
 }
 
 /* New dataTable component css styles */
+.Table {
+}
 
-.table-container {
+.Rows-container {
   margin: 0;
-  height: 100%;
+  bottom: 0;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
 }
 
 /* Fix scrollbar spacing issues */
-.table {
+.Rows {
   overflow: overlay !important;
 }
 
@@ -155,6 +157,7 @@ tbody tr {
 }
 
 .Row--header {
+  flex-shrink: 0;
   font-size: 0.92em;
   font-weight: bold;
   text-transform: uppercase;
